--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python==3.11.2
-PyQt5==5.15.10
-PyQt5Designer==5.14.1
-psycopg2==2.9.6
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-oauthlib==1.2.1
+email_validator==2.2.0
+streamlit
