--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -2,4 +2,4 @@ google-api-python-client==2.154.0
 google-auth==2.36.0
 google-auth-oauthlib==1.2.1
 email_validator==2.2.0
-streamlit
+streamlit == 1.32.0
